Added Hystrix for provider REST calls. Abstracted out BidSelector. Added response error structures. Added unit tests.

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>${lombok.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.netflix.hystrix</groupId>
+			<artifactId>hystrix-core</artifactId>
+			<version>1.5.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
