--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
 			<artifactId>hystrix-core</artifactId>
 			<version>1.5.6</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>21.0</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.7.16</version>
+		</dependency>
 	</dependencies>
 
 	<build>
