Changed the name of the service's jar. Fixed hystrix timeout setting. Added comments and readme files.

--- a/pom.xml
+++ b/pom.xml
@@ -69,8 +69,10 @@
 		    <version>2.7.16</version>
 		</dependency>
 	</dependencies>
-
+ 
 	<build>
+	    <finalName>ad-svc</finalName>
+	
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
